--- a/hello-spring/src/main/resources/templates/home.html
+++ b/hello-spring/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 <body>
 <header th:replace="header.html :: header"></header>
 <div class="container">
-    <!-- <div>
+    <div>
         <h1>Hello Spring</h1>
         <p>회원 기능</p>
         <p>
@@ -16,7 +16,7 @@
             <a href="/members">회원 목록</a>
             <a href="/members/remove">회원 삭제</a>
         </p>
-    </div> -->
+    </div>
 </div> <!-- /container -->
 </body>
 </html>
