--- a/hello-spring/src/main/resources/templates/members/memberList.html
+++ b/hello-spring/src/main/resources/templates/members/memberList.html
@@ -11,11 +11,11 @@
     <div class="navi-section">
         <nav>
             <ul class="navi">
-                <li class="nav-item nav-1" onclick="location.href='/home'"><img src="/assets/image/daou_logo.png" alt=""></li>
+                <li class="nav-item nav-1" onclick="location.href='/members'"><img src="/assets/image/daou_logo.png" alt=""></li>
                 <div class="right">
-                    <li class="nav-item nav-7"><a href="/home/mylist">Guest Book</a></li>
+                    <li class="nav-item nav-7"><a href="/members" >Guest Book</a></li>
                     <!--                        <li class="nav-item nav-2"><a href="/home/list">둘러보기</a></li>-->
-                    <li class="nav-item"><a href="/home/review">Write</a></li>
+                    <li class="nav-item"><a href="/members/new">Write</a></li>
                     <!--                        <li class="nav-item"><a href="/main/logout">로그아웃</a></li>-->
                 </div>
             </ul>
