--- a/hello-spring/src/main/resources/static/assets/css/review.css
+++ b/hello-spring/src/main/resources/static/assets/css/review.css
@@ -1,5 +1,6 @@
 html, body{
   overflow-x: hidden;
+  margin : 0;
 }
 .searchBox {
   display:flex; 
@@ -15,16 +16,16 @@ html, body{
 }
 
 .form__group {
-    position: relative;
+    display:inline-grid;
     padding: 15px 0 0;
-    width: 80%;
+    width: 50%;
     margin: 0 auto;
+    margin-left:200px;
 }
 
 
 .form__field {
   font-family: inherit;
-  width: 100%;
   border: 0;
   border-bottom: 2px solid #9b9b9b;
   outline: 0;
@@ -36,9 +37,20 @@ html, body{
   transition: border-color 0.2s;
 }
 
-.form__field::placeholder {
-  color: transparent;
+.form__field3 {
+  width:100%;
+  font-family: inherit;
+  border: 0;
+  border-bottom: 2px solid #9b9b9b;
+  outline: 0;
+  font-size: 1.75rem;
+  color: #000;
+  font-weight: bolder;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
 }
+
 .form__field:placeholder-shown ~ .form__label {
   font-size: 1.3rem;
   cursor: text;
@@ -46,7 +58,6 @@ html, body{
 }
 
 .form__label {
-  position: absolute;
   top: 0;
   display: block;
   transition: 0.2s;
@@ -82,7 +93,7 @@ html, body{
 .form-control {
     display: block;
     width: 98%;
-    margin-top: 5rem;
+    margin-top: 10px;
     height: auto;
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
@@ -157,9 +168,11 @@ html, body{
 }
 .review_send_btn{
     display: inline-block;
+    width : 100px;
+    position:absolute;
     font-weight: 400;
-    margin-top: 5rem;
-   
+    margin-top: 30px;
+    margin-left:42rem;
     text-align: center;
     vertical-align: middle;
     -webkit-user-select: none;
@@ -316,10 +329,6 @@ html, body{
   background-color: #17ac4e;
 }
 
-
-
-
-
 .details-modal {
   background: #ffffff;
   border-radius: 0.5em;
@@ -407,3 +416,34 @@ details summary::-webkit-details-marker {
   display: none;
 }
 
+.nameAndGroup{
+    display:flex;
+}
+
+.group{
+    margin-left: 50px
+}
+
+.title{
+    margin-top:20px;
+}
+.message{
+    margin-top:30px;
+}
+.wapper{
+    width:100%;
+    height:100%;
+}
+.wapper-text2{
+    font-size: 30px;
+    font-weight: 700;
+    font-family: 'Courier New', Courier, monospace;
+    display: inline-grid;
+    position: relative;
+    left:85%;
+}
+.wapper-text2 img{
+    width: 80px;
+    height: 80px;
+    margin: 30px 0 0 55px;
+}
