--- a/hello-spring/src/main/resources/templates/members/createMemberForm.html
+++ b/hello-spring/src/main/resources/templates/members/createMemberForm.html
@@ -5,12 +5,6 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/header.css">
     <link rel="stylesheet" th:href="@{/assets/css/review.css}">
 
-    <style>
-            html,body{
-                margin: 0;
-            }
-
-    </style>
 </head>
 <body>
 <header>
@@ -28,19 +22,32 @@
         </nav>
     </div>
 </header>
-
+<div class="wapper">
+<div class="wapper-text2"><img src="/assets/image/guests-book.png" alt="">Guest Book</div>
 <div class="form__group">
     <form action="/members/new" method="post">
-        <div style="display:flex;">
+        <div class="nameAndGroup">
+            <div>
             <label for="name" class="form__label">이름</label>
-            <input type="text" class="form__field" placeholder="이름" name="name" id='name' required/>
+            <input type="text" class="form__field" name="name" id='name'/>
+            </div>
+            <div class="group">
+            <label for="group" class="form__label">소속</label>
+            <input type="text" class="form__field" name="name" id='group' required/>
+            </div>
         </div>
-        <div>
+        <div class="title">
+            <label for="title" class="form__label">제목</label>
+            <input type="text" class="form__field3"  name="title" id='title' required/>
+        </div>
+        <div class="message">
+            <label for="message" class="form__label">내용</label>
             <textarea class="form-control" name="message" id="message" cols="30" rows="7"
-                          placeholder="작성해보세요" spellcheck="false"></textarea>
+                          placeholder="내용을 입력해 주세요." spellcheck="false"></textarea>
         </div>
         <button type="submit" class="review_send_btn" onclick="onclicka()">작성</button>
     </form>
+</div>
 </div>
 </body>
 </html>
