--- a/hello-spring/src/main/resources/templates/members/memberList.html
+++ b/hello-spring/src/main/resources/templates/members/memberList.html
@@ -27,12 +27,12 @@
     <div class="wapper-text2"><img src="/assets/image/corkboard.png" alt="">Guest Book</div>
     <div class="content" th:each="member : ${members}">
         <div th:if="${member.id % 2!=0}" class="list"  >
-            <div class="top"><span class="title" th:text = "${member.id}"></span></div>
-            <div class="buttom"><span class="w1">작성자: <span class="w2" th:text = "${member.name}"></span></span><span class="date" ></span></div>
+            <div class="top"><span class="title" th:text = "${member.title}"></span></div>
+            <div class="buttom"><span class="w1">작성자: <span class="w2" th:text = "${member.name}"></span></span><span class="date" th:text = "${#temporals.format(member.registerTime,'yyyy년 MM월 HH일 mm:ss')}" ></span></div>
         </div>
         <div th:unless="${member.id % 2!=0}" class="list2th">
-            <div class="top"><span class="title" th:text = "${member.id}"></span></div>
-            <div class="buttom"><span class="w1">작성자: <span class="w2" th:text = "${member.name}"></span></span><span class="date" ></span></div>
+            <div class="top"><span class="title" th:text = "${member.title}"></span></div>
+            <div class="buttom"><span class="w1">작성자: <span class="w2" th:text = "${member.name}"></span></span><span class="date" th:text = "${#temporals.format(member.registerTime,'yyyy년 MM월 HH일 mm:ss')}"></span></div>
         </div>
     </div>
 </div>
