--- a/hello-spring/src/main/resources/static/assets/css/detail.css
+++ b/hello-spring/src/main/resources/static/assets/css/detail.css
@@ -13,12 +13,14 @@ html, body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image:url(/assets/image/wallpaper2.jpg);
+    background-size:cover;
 }
 .outer::after {
     width: 100%;
     height: 100%;
     content: "";
-    background-image:url(/static/assets/image/list.jpg);
+
     background-size: 100% 90%;
     position: absolute;
     top: 0;
@@ -35,17 +37,19 @@ html, body{
 } */
 .detail{
     display: inline;
-    padding:40px 50px 50px 50px;
-    background-color: #add8e6;
+    padding:25px 50px 25px 50px;
     box-shadow: 0 0  20px rgba(0,0,0);
     position: relative;
+    background-image:url(/assets/image/paper.jpg);
+    background-size:cover;
     bottom: 30px;
 }
+
 .title{
     font-size: 35px;
     font-weight: 700;
     border-bottom: 1px solid gray;
-    padding-bottom: 10px;
+    padding: 20px;
 }
 .t2{
     font-size: 24px;
@@ -55,6 +59,15 @@ html, body{
     font-size: 20px;
 }
 .data1, .data2{
+    padding: 30px;
+}
+.data1{
     border-bottom: 1px solid gray;
-    padding-bottom: 10px;
+}
+.contentText{
+        font-size: 28px;
+        font-weight: 600;
+}
+.writer, .team,.date{
+    text-align:left;
 }
