--- a/hello-spring/src/main/resources/static/assets/css/review.css
+++ b/hello-spring/src/main/resources/static/assets/css/review.css
@@ -70,14 +70,14 @@ html, body{
   padding-bottom: 6px;
   font-weight: 700;
   border-width: 3px;
-  border-image: linear-gradient(to right, #11998e, #38ef7d);
+  border-image: linear-gradient(to right, #1971c2, #a5d8ff);
   border-image-slice: 1;
 }
 .form__field3:focus {
   padding-bottom: 6px;
   font-weight: 700;
   border-width: 3px;
-  border-image: linear-gradient(to right, #11998e, #38ef7d);
+  border-image: linear-gradient(to right, #1971c2, #a5d8ff);
   border-image-slice: 1;
 }
 /*
@@ -194,6 +194,10 @@ html, body{
     border-radius: 0.25rem;
    
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+.review_send_btn::hover{
+    transform:scale(1, 1.5);
+    transition:1s;
 }
 .select {
     border: 1px solid rgb(32, 201, 151);
@@ -438,6 +442,8 @@ details summary::-webkit-details-marker {
 .wapper{
     width:100%;
     height:100%;
+    background-image:url(/assets/image/wallpaper2.jpg);
+    background-size:cover;
 }
 .wapper-text2{
     font-size: 30px;
