completing of reading and creating function

--- a/hello-spring/src/main/resources/templates/members/createMemberForm.html
+++ b/hello-spring/src/main/resources/templates/members/createMemberForm.html
@@ -14,14 +14,13 @@
                 <li class="nav-item nav-1" onclick="location.href='/members'"><img src="/assets/image/daou_logo.png" alt=""></li>
                 <div class="right">
                     <li class="nav-item nav-7"><a href="/members" >Guest Book</a></li>
-                    <!--                        <li class="nav-item nav-2"><a href="/home/list">둘러보기</a></li>-->
                     <li class="nav-item"><a href="/members/new">Write</a></li>
-                    <!--                        <li class="nav-item"><a href="/main/logout">로그아웃</a></li>-->
                 </div>
             </ul>
         </nav>
     </div>
 </header>
+
 <div class="wapper">
 <div class="wapper-text2"><img src="/assets/image/guests-book.png" alt="">Write</div>
 <div class="form__group">
@@ -45,7 +44,7 @@
             <textarea class="form-control" name="message" id="message" cols="30" rows="7"
                           placeholder="내용을 입력해 주세요." spellcheck="false"></textarea>
         </div>
-        <button type="submit" class="review_send_btn" onclick="onclicka()">작성</button>
+        <button type="submit" class="review_send_btn">작성</button>
     </form>
 </div>
 </div>
