--- a/hello-spring/src/main/resources/templates/members/memberList.html
+++ b/hello-spring/src/main/resources/templates/members/memberList.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Member list</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/list.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/list.css?after">
     <link rel="stylesheet" type="text/css" href="/assets/css/header.css">
 </head>
 <body>
@@ -14,9 +14,7 @@
                 <li class="nav-item nav-1" onclick="location.href='/members'"><img src="/assets/image/daou_logo.png" alt=""></li>
                 <div class="right">
                     <li class="nav-item nav-7"><a href="/members" >Guest Book</a></li>
-                    <!--                        <li class="nav-item nav-2"><a href="/home/list">둘러보기</a></li>-->
                     <li class="nav-item"><a href="/members/new">Write</a></li>
-                    <!--                        <li class="nav-item"><a href="/main/logout">로그아웃</a></li>-->
                 </div>
             </ul>
         </nav>
@@ -26,21 +24,18 @@
 <div class="wapper">
     <div class="wapper-text2"><img src="/assets/image/corkboard.png" alt="">Guest Book</div>
     <div class="content" th:each="member : ${members}">
+
         <div th:if="${member.id % 2!=0}" class="list" th:onclick=" 'location.href=\'' + @{members/detail(id=${member.id})} +'\''">
             <div class="top"><span class="title" th:text = "${member.title}"></span></div>
             <div class="buttom"><span class="w1">작성자: <span class="w2" th:text = "${member.name}"></span></span><span class="date" th:text = "${#temporals.format(member.registerTime,'yyyy년 MM월 dd일 HH:mm')}" ></span></div>
         </div>
+
         <div th:unless="${member.id % 2!=0}" class="list2th" th:onclick=" 'location.href=\'' + @{members/detail(id=${member.id})} +'\''">
             <div class="top"><span class="title" th:text = "${member.title}"></span></div>
             <div class="buttom"><span class="w1">작성자: <span class="w2" th:text = "${member.name}"></span></span><span class="date" th:text = "${#temporals.format(member.registerTime,'yyyy년 MM월 dd일 HH:mm')}"></span></div>
         </div>
     </div>
 </div>
-
-<!--    <div  th:each="member : ${members}">-->
-<!--        <div th:text = "${member.id}"> </div>-->
-<!--        <div th:text = "${member.name}"> </div>-->
-<!--    </div>-->
 
 </body>
 </html>
